[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-36-Moving_Omni.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/R_BasicX20.tres" type="TileSet" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.0229, 37.522 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.9712
height = 59.5188

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.30122
height = 70.1265

[sub_resource type="CircleShape2D" id=4]
radius = 3.32799

[node name="MP-36-Moving_Onmi" type="Node2D"]
script = ExtResource( 1 )

[node name="Plat" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
cell_quadrant_size = 20
collision_layer = 20
collision_mask = 983060
format = 1
tile_data = PoolIntArray( 65534, 15, 0, 65535, 16, 0, 0, 16, 0, 1, 17, 0 )

[node name="Area2D_Player" type="Area2D" parent="Plat"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat/Area2D_Player"]
position = Vector2( 0, -4.12948 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D-Kill-plat" type="Area2D" parent="Plat"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plat/Area2D-Kill-plat"]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D-Kill-Up" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Kill-Up"]
position = Vector2( -3.89414e-007, -2 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="Area2D-Kill-Down" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Kill-Down"]
position = Vector2( 3.89414e-007, 22 )
rotation = 1.5708
shape = SubResource( 3 )
disabled = true

[node name="Area2D-Kill-Left" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Kill-Left"]
position = Vector2( -42, 10 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[node name="Area2D-Kill-Right" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D-Kill-Right"]
position = Vector2( 42, 10 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Start_Timer" type="Timer" parent="."]
[connection signal="body_entered" from="Plat/Area2D_Player" to="." method="_on_Area2D_Player_body_entered"]
[connection signal="body_exited" from="Plat/Area2D_Player" to="." method="_on_Area2D_Player_body_exited"]
[connection signal="body_entered" from="Plat/Area2D-Kill-plat" to="." method="_on_Area2DKillplat_body_entered"]
[connection signal="body_exited" from="Plat/Area2D-Kill-plat" to="." method="_on_Area2DKillplat_body_exited"]
[connection signal="body_entered" from="Area2D-Kill-Up" to="." method="_on_Area2DKillUp_body_entered"]
[connection signal="body_exited" from="Area2D-Kill-Up" to="." method="_on_Area2DKillUp_body_exited"]
[connection signal="body_entered" from="Area2D-Kill-Down" to="." method="_on_Area2DKillDown_body_entered"]
[connection signal="body_exited" from="Area2D-Kill-Down" to="." method="_on_Area2DKillDown_body_exited"]
[connection signal="body_entered" from="Area2D-Kill-Left" to="." method="_on_Area2DKillLeft_body_entered"]
[connection signal="body_exited" from="Area2D-Kill-Left" to="." method="_on_Area2DKillLeft_body_exited"]
[connection signal="body_entered" from="Area2D-Kill-Right" to="." method="_on_Area2DKillRight_body_entered"]
[connection signal="body_exited" from="Area2D-Kill-Right" to="." method="_on_Area2DKillRight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
